--- a/app/contact.html
+++ b/app/contact.html
@@ -416,12 +416,30 @@
 
     <footer class="footer ">
 
-        <div class="footer__container ">
+        <div class="footer__container">
             <div class="footer__content ">
+                <div class="footer__left">
+                    <h1 class="footer__left--title">WHY SHOULD YOU HIRE US?</h1>
+                    <p class="footer__desc">
+                        Besides the fact that over 100 businesses trust us to deliver 
+                        spectacular products/services, here are a few significant 
+                        reasons why you should collaborate with us.
+                    </p>
+                    <ul>
+                        <li>Ease of business</li>
+                        <li>Minimal Risk</li>
+                        <li>Competence</li>
+                        <li>Collaboration</li>
+                        <li>Successful Experience</li>
+                        
+                    </ul>
+                </div>
+
                 <div>
 
                     <h2 class="footer__title ">
-                        <span>Start a </span>Project
+                        <span>Talk to Us about</span><br>
+                        Your Project
                     </h2>
 
                     <br>
@@ -434,33 +452,7 @@
 
             </div>
 
-            <!-- <form class="footer__quote ">
-                            <h2 class="footer__quote__title ">Get in touch</h2>
-                            <div class="footer__quote__input-container ">
-                                <input type="text " id="footer-name " required class="footer__quote__input ">
-                                <label class="footer__label " for="footer-name ">Name</label>
-                            </div>
-                            <div class="footer__quote__input-container ">
-                                <input type="email " id="footer-email " required class="footer__quote__input ">
-                                <label class="footer__label " for="footer-email ">Email Address</label>
-                            </div>
-                            <div class="footer__quote__input-container ">
-                                <input type="number " id="footer-number " required class="footer__quote__input ">
-                                <label class="footer__label " for="footer-number ">Phone Number</label>
-                            </div>
-                            <div class="footer__quote__input-container ">
-                                <input type="text " id="footer-company " required class="footer__quote__input ">
-                                <label class="footer__label " for="footer-company ">Company Name</label>
-                            </div>
-                            <div class="footer__quote__input-container ">
-                                <textarea class="footer__quote__input footer__quote__input--msg " rows="1 "></textarea>
-                                <label class="footer__label " for="footer-message ">Message</label>
-                            </div>
-                            <div class="footer__quote__input-container ">
-                                <input type="submit" class="footer__submit footer__submit--adjust" value="Submit">
-                            </div>
-                        </form> -->
-
+            
             <div class="footer__lower-content ">
 
                 <form class="footer__input-container">
