--- a/app/index.html
+++ b/app/index.html
@@ -285,119 +285,7 @@
                 <h1 class="header__title ">
                     We are a
                     <svg class="header__design " viewBox="0 0 187 61 " fill="none " xmlns="http://www.w3.org/2000/svg ">
-                        <!-- <mask id="path-1-outside-1 " maskUnits="userSpaceOnUse " x="-0.280273 " y="0.619995
-                                            " width="187 " height="60 " fill="black ">
-                            <rect fill="white " x="-0.280273 " y="0.619995 " width="187 " height="60 " />
-                            <path d="M49.3597 19.86C49.3597 24.46 48.2397 28.92 45.9997 33.24C43.7597 37.56 40.3997 41.1
-                                            35.9197 43.86C31.4797 46.62 26.0997 48 19.7797 48L16.8397 47.94C14.5197 47.86 12.4797
-                                            47.82 10.7197 47.82C6.83973 47.82 3.83973 47.88 1.71973 48L1.89973 46.8C3.25973 46.72
-                                            4.27973 46.56 4.95973 46.32C5.67973 46.08 6.23973 45.62 6.63973 44.94C7.07973 44.22
-                                            7.49973 43.12 7.89973 41.64L15.7597 11.88C16.0797 10.8 16.2397 9.94 16.2397 9.3C16.2397
-                                            8.41999 15.9397 7.77999 15.3397 7.38C14.7797 6.98 13.7597 6.76 12.2797 6.72L12.4597
-                                            5.52C14.2597 5.64 16.8997 5.7 20.3797 5.7H22.2997C26.4997 5.58 29.4797 5.52 31.2397
-                                            5.52C37.1197 5.52 41.5997 6.74 44.6797 9.18C47.7997 11.58 49.3597 15.14 49.3597 19.86ZM19.7797
-                                            46.92C23.8597 46.92 27.3997 45.5 30.3997 42.66C33.3997 39.82 35.6797 36.18 37.2397
-                                            31.74C38.8397 27.26 39.6397 22.66 39.6397 17.94C39.6397 14.18 38.8597 11.36 37.2997
-                                            9.48C35.7397 7.56 33.2797 6.59999 29.9197 6.59999C28.8797 6.59999 28.0997 6.74 27.5797
-                                            7.02C27.0997 7.26 26.6997 7.72 26.3797 8.4C26.0597 9.08 25.6997 10.2 25.2997 11.76L17.4397
-                                            41.76C16.9997 43.52 16.7797 44.62 16.7797 45.06C16.7797 45.74 16.9997 46.22 17.4397
-                                            46.5C17.9197 46.78 18.6997 46.92 19.7797 46.92Z "
-                            />
-                            <path d="M78.3688 20.88C78.3688 24.2 76.5088 27.1 72.7888 29.58C69.0688 32.06 64.7488 33.98
-                                            59.8288 35.34C59.5888 36.7 59.4688 38.06 59.4688 39.42C59.4688 41.54 59.8488 43.04
-                                            60.6088 43.92C61.4088 44.8 62.5688 45.24 64.0888 45.24C65.3288 45.24 66.7288 44.86
-                                            68.2888 44.1C69.8488 43.3 71.3688 42.04 72.8488 40.32L73.8088 40.8C72.3688 43.04
-                                            70.4288 44.94 67.9888 46.5C65.5888 48.06 62.8888 48.84 59.8888 48.84C57.1288 48.84
-                                            54.8688 48.1 53.1088 46.62C51.3488 45.14 50.4688 43.06 50.4688 40.38C50.4688 36.82
-                                            51.4288 33.14 53.3488 29.34C55.2688 25.54 57.8888 22.4 61.2088 19.92C64.5288 17.4
-                                            68.1688 16.14 72.1288 16.14C73.9688 16.14 75.4688 16.56 76.6288 17.4C77.7888 18.2
-                                            78.3688 19.36 78.3688 20.88ZM70.8088 17.28C69.6488 17.28 68.3288 18.1 66.8488 19.74C65.3688
-                                            21.38 64.0088 23.52 62.7688 26.16C61.5288 28.76 60.6088 31.44 60.0088 34.2C62.8488
-                                            32.96 65.0488 31.62 66.6088 30.18C68.2088 28.74 69.4688 27.1 70.3888 25.26C71.3088
-                                            23.38 71.7688 21.38 71.7688 19.26C71.7688 18.5 71.6888 17.98 71.5288 17.7C71.3688
-                                            17.42 71.1288 17.28 70.8088 17.28Z "
-                            />
-                            <path d="M82.8538 47.16C83.4538 47.44 84.2338 47.58 85.1938 47.58C86.7138 47.58 87.9338 47.12
-                                            88.8538 46.2C89.7738 45.28 90.2338 44.02 90.2338 42.42C90.2338 41.14 89.9538 39.82
-                                            89.3938 38.46C88.8338 37.1 87.9938 35.56 86.8738 33.84C86.7138 33.6 86.2338 32.88
-                                            85.4338 31.68C84.6738 30.48 84.0938 29.34 83.6938 28.26C83.3338 27.14 83.1538 26.04
-                                            83.1538 24.96C83.1538 22.36 84.1138 20.24 86.0338 18.6C87.9938 16.96 90.6738 16.14
-                                            94.0738 16.14C96.6738 16.14 98.8338 16.62 100.554 17.58C102.314 18.5 103.194 20.1
-                                            103.194 22.38C103.194 23.5 102.874 24.52 102.234 25.44C101.594 26.36 100.694 26.82
-                                            99.5338 26.82C98.5338 26.82 97.7338 26.44 97.1338 25.68C96.5338 24.92 96.2338 23.96
-                                            96.2338 22.8C96.2338 21.8 96.4138 20.88 96.7738 20.04C97.1338 19.16 97.5738 18.42
-                                            98.0938 17.82C97.5738 17.5 96.8738 17.34 95.9938 17.34C94.5538 17.34 93.4138 17.8
-                                            92.5738 18.72C91.7738 19.6 91.3538 20.84 91.3138 22.44C91.3138 23.52 91.5138 24.5
-                                            91.9138 25.38C92.3538 26.26 93.0738 27.5 94.0738 29.1L94.9138 30.36C96.1938 32.48
-                                            97.0938 34.22 97.6138 35.58C98.1738 36.94 98.4538 38.3 98.4538 39.66C98.4538 41.42
-                                            97.9938 43 97.0738 44.4C96.1538 45.76 94.8338 46.84 93.1138 47.64C91.4338 48.44 89.4538
-                                            48.84 87.1738 48.84C84.3338 48.84 81.9738 48.3 80.0938 47.22C78.2138 46.1 77.2738
-                                            44.32 77.2738 41.88C77.2738 40.68 77.5738 39.66 78.1738 38.82C78.7738 37.98 79.5938
-                                            37.56 80.6338 37.56C81.6738 37.56 82.4938 38 83.0938 38.88C83.7338 39.76 84.0538
-                                            40.88 84.0538 42.24C84.0538 43.12 83.9538 43.92 83.7538 44.64C83.5538 45.32 83.2538
-                                            46.16 82.8538 47.16Z "
-                            />
-                            <path d="M114.229 6.96C114.269 5.32 114.869 4.02 116.029 3.06C117.189 2.1 118.629 1.62 120.349
-                                            1.62C121.749 1.62 122.829 1.95999 123.589 2.64C124.389 3.28 124.789 4.18 124.789
-                                            5.34C124.789 6.94 124.189 8.26 122.989 9.3C121.789 10.34 120.309 10.86 118.549 10.86C117.109
-                                            10.86 116.009 10.52 115.249 9.84C114.489 9.12 114.149 8.16 114.229 6.96ZM111.949
-                                            22.08C112.229 21.16 112.369 20.56 112.369 20.28C112.369 19.48 112.009 19.08 111.289
-                                            19.08C110.569 19.08 109.909 19.46 109.309 20.22C108.709 20.94 108.089 22.14 107.449
-                                            23.82L106.249 26.88H105.109L106.789 22.32C108.269 18.2 111.049 16.14 115.129 16.14C116.969
-                                            16.14 118.309 16.6 119.149 17.52C119.989 18.4 120.409 19.56 120.409 21C120.409 22.16
-                                            120.189 23.34 119.749 24.54L113.449 42.9C113.209 43.62 113.089 44.2 113.089 44.64C113.089
-                                            45.48 113.489 45.9 114.289 45.9C114.889 45.9 115.489 45.56 116.089 44.88C116.729
-                                            44.2 117.389 42.96 118.069 41.16L119.149 38.28H120.289L118.729 42.66C117.329 46.78
-                                            114.629 48.84 110.629 48.84C106.989 48.84 105.169 47.18 105.169 43.86C105.169 42.54
-                                            105.469 41.02 106.069 39.3L111.949 22.08Z "
-                            />
-                            <path d="M150.785 13.5C152.025 13.5 152.985 13.84 153.665 14.52C154.345 15.2 154.685 16.14
-                                            154.685 17.34C154.685 18.42 154.405 19.28 153.845 19.92C153.285 20.52 152.625 20.82
-                                            151.865 20.82C151.065 20.82 150.365 20.52 149.765 19.92C149.165 19.28 148.865 18.42
-                                            148.865 17.34C148.865 16.58 149.045 15.7 149.405 14.7C147.845 15.38 146.645 16.28
-                                            145.805 17.4C146.845 17.92 147.645 18.66 148.205 19.62C148.765 20.54 149.045 21.66
-                                            149.045 22.98C149.045 24.66 148.565 26.34 147.605 28.02C146.685 29.66 145.365 31.1
-                                            143.645 32.34C141.925 33.54 139.925 34.36 137.645 34.8C135.405 35.8 133.785 36.6
-                                            132.785 37.2C131.825 37.8 131.345 38.38 131.345 38.94C131.345 39.3 131.565 39.62
-                                            132.005 39.9C132.445 40.14 133.125 40.4 134.045 40.68L139.085 42.36C141.205 43.08
-                                            142.865 43.92 144.065 44.88C145.305 45.8 145.925 47.12 145.925 48.84C145.925 50.76
-                                            145.085 52.52 143.405 54.12C141.765 55.76 139.545 57.06 136.745 58.02C133.945 58.98
-                                            130.925 59.46 127.685 59.46C124.565 59.46 121.965 59.04 119.885 58.2C117.805 57.36
-                                            116.765 56.26 116.765 54.9C116.765 53.5 117.885 52.3 120.125 51.3C122.365 50.34 124.905
-                                            49.7 127.745 49.38L127.985 50.28C125.505 51.64 124.265 53.22 124.265 55.02C124.265
-                                            56.14 124.685 56.98 125.525 57.54C126.365 58.14 127.525 58.44 129.005 58.44C130.485
-                                            58.44 132.025 58.14 133.625 57.54C135.265 56.98 136.625 56.2 137.705 55.2C138.785
-                                            54.24 139.325 53.2 139.325 52.08C139.325 51.44 139.085 50.96 138.605 50.64C138.165
-                                            50.36 137.365 50.06 136.205 49.74L127.685 47.28C126.605 46.96 125.725 46.48 125.045
-                                            45.84C124.405 45.16 124.085 44.34 124.085 43.38C124.085 41.94 124.925 40.6 126.605
-                                            39.36C128.325 38.12 131.065 36.7 134.825 35.1H134.225C131.545 35.1 129.365 34.54
-                                            127.685 33.42C126.045 32.3 125.225 30.62 125.225 28.38C125.225 26.54 125.785 24.68
-                                            126.905 22.8C128.065 20.92 129.765 19.36 132.005 18.12C134.245 16.84 136.905 16.2
-                                            139.985 16.2C141.665 16.2 143.225 16.42 144.665 16.86C145.385 15.86 146.285 15.06
-                                            147.365 14.46C148.485 13.82 149.625 13.5 150.785 13.5ZM135.245 34.02C137.045 34.02
-                                            138.425 32.68 139.385 30C140.345 27.28 140.825 24.3 140.825 21.06C140.825 19.86 140.685
-                                            18.94 140.405 18.3C140.165 17.62 139.665 17.28 138.905 17.28C137.745 17.28 136.725
-                                            17.98 135.845 19.38C135.005 20.78 134.365 22.52 133.925 24.6C133.525 26.64 133.325
-                                            28.6 133.325 30.48C133.325 31.76 133.485 32.68 133.805 33.24C134.125 33.76 134.605
-                                            34.02 135.245 34.02Z "
-                            />
-                            <path d="M184.786 38.28L183.286 42.66C181.846 46.78 179.166 48.84 175.246 48.84C173.006 48.84
-                                            171.406 48.18 170.446 46.86C169.926 46.1 169.666 45.16 169.666 44.04C169.666 42.76
-                                            169.986 41.18 170.626 39.3L176.026 23.1C176.386 22.02 176.566 21.16 176.566 20.52C176.566
-                                            19.6 176.186 19.14 175.426 19.14C174.226 19.14 172.766 20.36 171.046 22.8C169.366
-                                            25.24 167.666 28.46 165.946 32.46C164.226 36.42 162.726 40.6 161.446 45L160.666 48H152.206L159.466
-                                            22.08C159.706 21.36 159.826 20.72 159.826 20.16C159.826 19.44 159.486 19.08 158.806
-                                            19.08C158.046 19.08 157.366 19.44 156.766 20.16C156.206 20.84 155.606 22.06 154.966
-                                            23.82L153.826 26.88H152.686L154.306 22.32C155.066 20.12 156.086 18.54 157.366 17.58C158.646
-                                            16.62 160.206 16.14 162.046 16.14C165.486 16.14 167.206 17.78 167.206 21.06C167.206
-                                            22.18 167.046 23.34 166.726 24.54L164.866 31.8C166.506 27.72 168.066 24.56 169.546
-                                            22.32C171.066 20.04 172.586 18.44 174.106 17.52C175.666 16.6 177.386 16.14 179.266
-                                            16.14C182.866 16.14 184.666 17.74 184.666 20.94C184.666 22.14 184.406 23.56 183.886
-                                            25.2L178.006 42.9C177.766 43.62 177.646 44.2 177.646 44.64C177.646 45.48 178.026
-                                            45.9 178.786 45.9C179.426 45.9 180.046 45.56 180.646 44.88C181.286 44.2 181.926 42.96
-                                            182.566 41.16L183.646 38.28H184.786Z "
-                            />
-                        </mask> -->
+                        
                         <path d="M49.3597 19.86C49.3597 24.46 48.2397 28.92 45.9997 33.24C43.7597 37.56 40.3997 41.1 35.9197
                                             43.86C31.4797 46.62 26.0997 48 19.7797 48L16.8397 47.94C14.5197 47.86 12.4797 47.82
                                             10.7197 47.82C6.83973 47.82 3.83973 47.88 1.71973 48L1.89973 46.8C3.25973 46.72 4.27973
@@ -723,7 +611,7 @@
 
     </section>
 
-    <section class="portfolio">
+     <section class="portfolio">
 
         <img src="assets/images/bg-spot.png " alt=" " class="portfolio__bg-spot ">
         <img src="assets/images/bg-spot-2.png " alt=" " class="portfolio__bg-spot--right ">
@@ -972,10 +860,28 @@
 
         <div class="footer__container">
             <div class="footer__content ">
+                <div class="footer__left">
+                    <h1 class="footer__left--title">WHY SHOULD YOU HIRE US?</h1>
+                    <p class="footer__desc">
+                        Besides the fact that over 100 businesses trust us to deliver 
+                        spectacular products/services, here are a few significant 
+                        reasons why you should collaborate with us.
+                    </p>
+                    <ul>
+                        <li>Ease of business</li>
+                        <li>Minimal Risk</li>
+                        <li>Competence</li>
+                        <li>Collaboration</li>
+                        <li>Successful Experience</li>
+                        
+                    </ul>
+                </div>
+
                 <div>
 
                     <h2 class="footer__title ">
-                        <span>Start a </span>Project
+                        <span>Talk to Us about</span><br>
+                        Your Project
                     </h2>
 
                     <br>
