--- a/app/index.html
+++ b/app/index.html
@@ -855,6 +855,44 @@
 
 
     </section> 
+    <section class="diff">
+
+        <div class="row">
+            <h2 class="title diff__title ">
+                Our differentiator
+            </h2>
+
+            <div class="diff__container">
+
+                <div>
+                    <img src="assets/images/diffbg1.png" alt="">
+                    <h3>We aid business transformation</h3>
+                    <p>
+                        A part of our value added service is business transformation consultation. 
+                        We examine your business for legacy systems and processes. Then identify the best ways to replace those outdated 
+                        processes and systems with technology that will increase efficiency and productivity
+                    </p>
+                </div>
+                <img class="divider" src="assets/images/dividebar.png" alt="">
+                <div>
+                    <img src="assets/images/diffbg2.png" alt="">
+                    <h3>Business transition report</h3>
+                    <p>
+                        KJK Africa has the expertise and experience to help non-tech businesses venture into 
+                        the tech space with ready to market products and services. With our dedicated consultants and developers by your side, you can have all the 
+                        transition details handled swiftly, build a technology product and prepare for launch.
+                    </p>
+                </div>
+                
+            </div>
+
+            
+
+        </div>
+
+
+
+    </section> 
 
     <footer class="footer ">
 
