--- a/app/team.html
+++ b/app/team.html
@@ -26,9 +26,9 @@
 
 <body id="about">
 
-    <!-- <header class="header">
+    <header class="header">
 
-        <div class="header__container header__container--work">
+        <div class="header__container header__container--team">
 
             <div class="nav-bar">
                 <div class="nav-bar__container row">
@@ -293,10 +293,10 @@
             </div>
 
         </div>
-    </header> -->
+    </header>
     
 
-    <!-- <section class="">
+    <section class="">
         <img src="assets/images/mapornge.png" alt="" class="team__img-bg-top">
 
         <div class="team__row xpad">
@@ -357,8 +357,8 @@
 
         </div>
 
-    </section> -->
-    <!-- <section class="">
+    </section>
+    <section class="">
         <img src="assets/images/Ellipse-big.png" alt="" class="team__img-bg">
         <div class="row">
             <div class="team__container">
@@ -440,7 +440,7 @@
 
         </div>
 
-    </section> -->
+    </section>
     <section class="team xpad">
         <img src="assets/images/Ellipse-big.png" alt="" class="team__img-bg">
         <div class="row">
