--- a/app/team.html
+++ b/app/team.html
@@ -756,8 +756,8 @@
             delay: 200
         };
 
-        ScrollReveal({ reset: false }).reveal(".work__content", slideInTop);
-        ScrollReveal({ reset: false }).reveal(".work__title", slideInLeft);
+        ScrollReveal({ reset: false }).reveal(".team__board", slideInTop);
+        ScrollReveal({ reset: false }).reveal(".title", slideInLeft);
         ScrollReveal({ reset: false }).reveal(".footer__title", slideInDown);
 
 
