--- a/app/who.html
+++ b/app/who.html
@@ -28,7 +28,7 @@
 
     <header class="header">
 
-        <div class="header__container header__container--work">
+        <div class="header__container header__container--who">
 
             <div class="nav-bar">
                 <div class="nav-bar__container row">
@@ -299,6 +299,7 @@
     <section class="">
 
         <div class="who__row xpad">
+            <img class="who__dot" src="assets/images/who-dots.png" alt="">
             <div class="who__container--main">
                 <div class="who__hero" >
                 <h2 class="">    
@@ -320,34 +321,43 @@
                             <div >
                             <img src="assets/images/browncircle.png" alt="" class="who__img--right">
                             <div class="outCircle">
+                                <p>
+                                    At KJK Africa, we draw on our business acumen, technology, 
+                                    and branding expertise to deliver technology products and services that are
+                                </p>
                                 <div class="rotate">
                                   <div class="counterrotate" style="width: 204px;
                                   height: 0;">
-                                    <div class="inner" style="left: 129px;top: -47px;">h1
+                                    <div class="inner" style="left: 129px;top: -90px;">
+                                        <h3>Effective</h3>
                                     </div>
                                   </div>
                                   <div class="counterrotate" style="    width: 28px;
                                   height: 16px">
-                                    <div class="inner" style="left: 0px;top: -38px;">
-                                        h2
+                                    <div class="inner" style="left: -20px;top: -63px;">
+                                        <h3>Easy<br> 
+                                            to use
+                                        </h3>
                                     </div>
                                   </div>
                                   <div class="counterrotate" style="width: 2px;
                                   height: 164px;">
-                                    <div class="inner" style="left: -46px;
-                                    top: 55px;">h3
+                                    <div class="inner" style="left: -100px;
+                                    top: 55px;">
+                                    <h3>Scalable</h3>
                                     </div>
                                   </div>
                                   <div class="counterrotate" style="height: 15px;
                                   width: 82px;">
                                     <div class="inner" style="left: -12px;
-                                    top: 3px;">h4
-                                    </div>
+                                    top: 3px;">
+                                        <h3>Consumer <br>friendly </h3>                                    </div>
                                   </div>
                                   
                                   <div class="counterrotate" style="width: 273px;">
                                     <div class="inner" style="left: 128px;
-                                    top: 24px;">h5
+                                    top: 24px;">
+                                    <h3>Profitable</h3>
                                     </div>
                                   </div>
                                   
