solution page and responsive

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
                         <img src="assets/images/kjk-white.png" alt="logo" class="nav-bar__logo">
                     </a>
                     <div class="nav-bar__right-content-container">
-                        <a href="work.html" class="nav-bar__link">
+                        <a href="contact.html" class="nav-bar__link">
                             Contact us
                         </a>
                         <a href="about.html" class="nav-bar__link">
@@ -75,7 +75,7 @@
                             </a>
                             <div class="mobile-nav__list mobile-nav--resp">
                                 <div class="mobile-nav__list-item mobile-nav__list-item--header">
-                                    <a href="" class="mobile-nav__title">
+                                    <a href="#" class="mobile-nav__title">
                                         Who we are
                                     </a>
                                 </div>
@@ -116,52 +116,52 @@
                             </a>
                             <div class="mobile-nav__list mobile-nav--resp">
                                 <div class="mobile-nav__list-item mobile-nav__list-item--header">
-                                    <a href="" class="mobile-nav__title">
+                                    <a href="solutions.html" class="mobile-nav__title">
                                         Industries
                                     </a>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                    <a href="" class="mobile-nav__title mobile-nav__title--small">
+                                    <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small">
                                         Retail and Ecommerce
                                     </a>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                    <a href="" class="mobile-nav__title mobile-nav__title--small">
+                                    <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small">
                                         Real Estate
                                     </a>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                    <a href="" class="mobile-nav__title mobile-nav__title--small">
+                                    <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small">
                                         Mobility Tech
                                     </a>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                    <a href="" class="mobile-nav__title mobile-nav__title--small">
+                                    <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small">
                                         Agriculture
                                     </a>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                    <a href="" class="mobile-nav__title mobile-nav__title--small">
+                                    <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small">
                                         Food Tech
                                     </a>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                    <a href="" class="mobile-nav__title mobile-nav__title--small">
+                                    <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small">
                                         EduTech
                                     </a>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                    <a href="" class="mobile-nav__title mobile-nav__title--small">
+                                    <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small">
                                         FinTech
                                     </a>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                    <a href="" class="mobile-nav__title mobile-nav__title--small">
+                                    <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small">
                                         Travel and Tourism
                                     </a>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                    <a href="" class="mobile-nav__title mobile-nav__title--small">
+                                    <a href="soutions.html" class="mobile-nav__title mobile-nav__title--small">
                                         School and Management
                                     </a>
                                 </div>
@@ -204,18 +204,18 @@
                                     </div>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--header">
-                                    <a href="portfolio.html" class="mobile-nav__title">
+                                    <a href="ourworks.html" class="mobile-nav__title">
                                         KJK Products
                                     </a>
                                 </div>
                                 <div class="mobile-nav--flex">
                                     <div class="mobile-nav--xspace" class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="trudata.ng" class="mobile-nav__title mobile-nav__title--small">
+                                        <a href="pave.ng" class="mobile-nav__title mobile-nav__title--small">
                                             PAVE
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="tworeport.com" class="mobile-nav__title mobile-nav__title--small">
+                                        <a href="ourworks.html" class="mobile-nav__title mobile-nav__title--small">
                                             Eduportal
                                         </a>
                                     </div>
@@ -237,7 +237,7 @@
                                 </div>
                                 <div class="mobile-nav--flex">
                                     <div style="flex: 50%;" class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="trudata.ng" class="mobile-nav__title mobile-nav__title--small">
+                                        <a href="services.html" class="mobile-nav__title mobile-nav__title--small">
                                             Branding &amp; Development
                                         </a>
                                     </div>
@@ -269,17 +269,17 @@
                                     </a>
                                 </div>
                                 <div class="mobile-nav__list-item">
-                                    <a href="" class="mobile-nav__title">
+                                    <a href="services.html" class="mobile-nav__title">
                                         Coporate E-brand
                                     </a>
                                 </div>
                                 <div class="mobile-nav__list-item">
-                                    <a href="" class="mobile-nav__title">
+                                    <a href="services.html" class="mobile-nav__title">
                                         Desktop Development
                                     </a>
                                 </div>
                                 <div class="mobile-nav__list-item">
-                                    <a href="" class="mobile-nav__title">
+                                    <a href="services.html" class="mobile-nav__title">
                                         Business Technology Consulting
                                     </a>
                                 </div>
@@ -295,7 +295,7 @@
                             <div class="mobile-nav__list mobile-nav--resp">
 
                                 <div class="mobile-nav__list-item mobile-nav__list-item--header">
-                                    <a href="" class="mobile-nav__title">
+                                    <a href="contact.html" class="mobile-nav__title">
                                         Get in touch with us
                                     </a>
                                 </div>
@@ -337,7 +337,7 @@
                         </div>
 
                         <div class="mobile-nav__container">
-                            <a href="work.html" class="mobile-nav__menu-bar">
+                            <a href="contact.html.html" class="mobile-nav__menu-bar">
                                 Contact Us
                             </a>
                         </div>
